salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Retirement_Job_Income__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Job_Income__c</fullName>
    <description>Expected income from jobs in retirement</description>
    <label>Job(s) in Retirement Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>