salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Retirement_System__c.field-meta.xml
<CustomField>
    <fullName>Retirement_System__c</fullName>
    <description>Federal retirement system</description>
    <label>Retirement System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSRS</fullName>
            </value>
            <value>
                <fullName>FERS</fullName>
            </value>
            <value>
                <fullName>xFERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>