salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Retirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Type__c</fullName>
    <description>Type of retirement</description>
    <label>Retirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>