salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Service_Computation_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Computation_Date__c</fullName>
    <description>Service Computation Date from LES/PSB</description>
    <label>Service Computation Date (SCD)</label>
    <type>Date</type>
</CustomField>