salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Sick_Leave_Hours_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Hours_Per_Period__c</fullName>
    <description>Sick leave hours accrued per pay period</description>
    <label>Sick Leave Hours/Pay Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>