salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Sick_Leave_Hours_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Hours_To_Date__c</fullName>
    <description>Total sick leave hours accumulated</description>
    <label>Sick Leave Hours to Date</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>