salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Spouse_DOB__c.field-meta.xml
<CustomField>
    <fullName>Spouse_DOB__c</fullName>
    <description>Spouse date of birth</description>
    <label>Spouse Date of Birth</label>
    <type>Date</type>
</CustomField>