salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Spouse_Income__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Income__c</fullName>
    <description>Spouse&apos;s income</description>
    <label>Spouse Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>