salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Spouse_Retirement_Savings__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Retirement_Savings__c</fullName>
    <description>Spouse&apos;s retirement savings</description>
    <label>Spouse Retirement Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>