salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Spouse_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Social_Security__c</fullName>
    <description>Spouse&apos;s Social Security benefit</description>
    <label>Spouse Social Security</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>