salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/SS_CSRS_COLA__c.field-meta.xml
<CustomField>
    <fullName>SS_CSRS_COLA__c</fullName>
    <description>Social Security COLA (CSRS Offset)</description>
    <label>SS COLA (CSRS Offset)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>