salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/SS_CSRS_Monthly_Benefit__c.field-meta.xml
<CustomField>
    <fullName>SS_CSRS_Monthly_Benefit__c</fullName>
    <description>Monthly Social Security benefit amount (CSRS Offset)</description>
    <label>SS Monthly Benefit (CSRS Offset)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>