salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/SS_FERS_COLA__c.field-meta.xml
<CustomField>
    <fullName>SS_FERS_COLA__c</fullName>
    <description>Social Security Cost of Living Adjustment (FERS)</description>
    <label>SS COLA (FERS)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>