salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/SS_FERS_Start_Age__c.field-meta.xml
<CustomField>
    <fullName>SS_FERS_Start_Age__c</fullName>
    <description>Age to begin taking Social Security (FERS)</description>
    <label>SS Start Age (FERS)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>