salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence__c</fullName>
    <label>State of Residence</label>
    <type>Text</type>
    <length>50</length>
</CustomField>