salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/State_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Rate__c</fullName>
    <label>State Tax Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>