salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the intake process</description>
    <label>Intake Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Link Sent</fullName>
            </value>
            <value>
                <fullName>Docs Uploaded</fullName>
            </value>
            <value>
                <fullName>AI Parsed</fullName>
            </value>
            <value>
                <fullName>Advisor Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>