salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Supabase_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Supabase_Folder_ID__c</fullName>
    <description>Supabase storage folder reference for uploaded docs</description>
    <label>Supabase Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>