salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Survivor_Benefit_CSRS__c.field-meta.xml
<CustomField>
    <fullName>Survivor_Benefit_CSRS__c</fullName>
    <description>CSRS survivor benefit percentage (0-100%)</description>
    <label>Survivor Benefit CSRS (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>