salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Survivor_Benefit_FERS__c.field-meta.xml
<CustomField>
    <fullName>Survivor_Benefit_FERS__c</fullName>
    <description>FERS survivor benefit election</description>
    <label>Survivor Benefit FERS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>