salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Tax_Increase_In_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Tax_Increase_In_Retirement__c</fullName>
    <description>Expected tax increase in retirement</description>
    <label>Tax Increase in Retirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>