salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <description>Transfer date if xFERS</description>
    <label>Transfer Date (xFER)</label>
    <type>Date</type>
</CustomField>