salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Annuity_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSP_Annuity_Interest_Rate__c</fullName>
    <description>TSP annuity interest rate</description>
    <label>TSP Annuity Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>