salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Joint_Annuitant__c.field-meta.xml
<CustomField>
    <fullName>TSP_Joint_Annuitant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there a joint annuitant for TSP annuity?</description>
    <label>TSP Joint Annuitant</label>
    <type>Checkbox</type>
</CustomField>