salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Joint_Annuitant_Age__c.field-meta.xml
<CustomField>
    <fullName>TSP_Joint_Annuitant_Age__c</fullName>
    <description>Age of TSP joint annuitant</description>
    <label>TSP Joint Annuitant Age</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>