salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Monthly_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>TSP_Monthly_Dollar_Amount__c</fullName>
    <description>Specific monthly dollar amount for TSP withdrawal</description>
    <label>TSP Monthly Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>