salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Monthly_Method__c.field-meta.xml
<CustomField>
    <fullName>TSP_Monthly_Method__c</fullName>
    <description>If Monthly Amount, which calculation method</description>
    <label>TSP Monthly Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific Dollar Amount</fullName>
            </value>
            <value>
                <fullName>Life Expectancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>