salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Return_F__c.field-meta.xml
<CustomField>
    <fullName>TSP_Return_F__c</fullName>
    <description>Assumed annual rate of return for F Fund</description>
    <label>TSP Assumed Return F Fund (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>