salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Return_S__c.field-meta.xml
<CustomField>
    <fullName>TSP_Return_S__c</fullName>
    <description>Assumed annual rate of return for S Fund</description>
    <label>TSP Assumed Return S Fund (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>