salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Roth_Alloc_C__c.field-meta.xml
<CustomField>
    <fullName>TSP_Roth_Alloc_C__c</fullName>
    <description>Roth TSP future contribution allocation to C Fund</description>
    <label>TSP Roth Allocation C (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>