salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Roth_Biweekly_Dollar__c.field-meta.xml
<CustomField>
    <fullName>TSP_Roth_Biweekly_Dollar__c</fullName>
    <description>Roth TSP biweekly dollar contribution</description>
    <label>TSP Roth Biweekly ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>