salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Roth_Catchup__c.field-meta.xml
<CustomField>
    <fullName>TSP_Roth_Catchup__c</fullName>
    <description>Roth TSP catch-up contribution</description>
    <label>TSP Roth Catch-up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>