salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Roth_S_Balance__c.field-meta.xml
<CustomField>
    <fullName>TSP_Roth_S_Balance__c</fullName>
    <description>TSP Roth S Fund existing balance</description>
    <label>TSP Roth S Fund Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>