salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Trad_Alloc_F__c.field-meta.xml
<CustomField>
    <fullName>TSP_Trad_Alloc_F__c</fullName>
    <description>Traditional TSP future contribution allocation to F Fund</description>
    <label>TSP Traditional Allocation F (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>