salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Trad_Biweekly_Dollar__c.field-meta.xml
<CustomField>
    <fullName>TSP_Trad_Biweekly_Dollar__c</fullName>
    <description>Traditional TSP biweekly dollar contribution</description>
    <label>TSP Traditional Biweekly ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>