salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Trad_Biweekly_Pct__c.field-meta.xml
<CustomField>
    <fullName>TSP_Trad_Biweekly_Pct__c</fullName>
    <description>Traditional TSP biweekly percentage contribution</description>
    <label>TSP Traditional Biweekly (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>