salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Trad_F_Balance__c.field-meta.xml
<CustomField>
    <fullName>TSP_Trad_F_Balance__c</fullName>
    <description>TSP Traditional F Fund existing balance</description>
    <label>TSP Traditional F Fund Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>