salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Trad_L_Fund__c.field-meta.xml
<CustomField>
    <fullName>TSP_Trad_L_Fund__c</fullName>
    <description>Traditional TSP Lifecycle fund selection</description>
    <label>TSP Traditional L Fund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L Income</fullName>
            </value>
            <value>
                <fullName>L2025</fullName>
            </value>
            <value>
                <fullName>L2030</fullName>
            </value>
            <value>
                <fullName>L2035</fullName>
            </value>
            <value>
                <fullName>L2040</fullName>
            </value>
            <value>
                <fullName>L2045</fullName>
            </value>
            <value>
                <fullName>L2050</fullName>
            </value>
            <value>
                <fullName>L2055</fullName>
            </value>
            <value>
                <fullName>L2060</fullName>
            </value>
            <value>
                <fullName>L2065</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>