salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Withdrawal_Age_Months__c.field-meta.xml
<CustomField>
    <fullName>TSP_Withdrawal_Age_Months__c</fullName>
    <description>Withdrawal age - months</description>
    <label>TSP Withdrawal Age (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>