salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Withdrawal_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>TSP_Withdrawal_Age_Years__c</fullName>
    <description>Withdrawal age - years</description>
    <label>TSP Withdrawal Age (Years)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>