salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/TSP_Withdrawal_Type__c.field-meta.xml
<CustomField>
    <fullName>TSP_Withdrawal_Type__c</fullName>
    <description>TSP withdrawal method</description>
    <label>TSP Withdrawal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
            <value>
                <fullName>Monthly Amount</fullName>
            </value>
            <value>
                <fullName>Annuity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>