salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Will_Redeposit__c.field-meta.xml
<CustomField>
    <fullName>Will_Redeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether employee has or will re-deposit contributions</description>
    <label>Will Re-deposit Contributions</label>
    <type>Checkbox</type>
</CustomField>