salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Withdrawal_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Received_Date__c</fullName>
    <description>Date withdrawal was received</description>
    <label>Withdrawal Received Date</label>
    <type>Date</type>
</CustomField>